[package]
name = "luminous-ttv"
version = "0.5.0"
authors = ["Malloc Voidstar <1284317+AlyoshaVasilieva@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/AlyoshaVasilieva/luminous-ttv"
license = "GPL-3.0-only"
description = "Avoid Twitch ads by grabbing video playlists from Russia"
readme = "README.md"

[dependencies]
anyhow = "1.0.43"
clap = { version = "4.1", features = ["derive", "env"] }
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"
serde_urlencoded = "0.7.1"
rand = "0.8.4"
const_format = "0.2.18"
url = "2.2.2"
extend = "1.1.2"
lazy-regex = { version = "2.3", default-features = false, features = ["std", "perf"], optional = true }
cfg-if = "1.0"

# Only used by Hola code:
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
confy = { version = "0.5", optional = true }
isocountry = { version = "0.3.2", optional = true }
serde-tuple-vec-map = { version = "1.0", optional = true }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"

# Axum and related deps
axum = { version = "0.6.1", features = ["headers", "http2"] }
axum-server = { version = "0.4", optional = true }
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.10", features = ["limit", "load-shed", "timeout", "util"] }
tower-http = { version = "0.3", features = ["cors", "set-header"] }

tracing = { version = "0.1", features = ["release_max_level_debug"] } # disable trace in releases
tracing-subscriber = "0.3"

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["rustls-tls", "gzip", "brotli", "socks", "json"]

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "0.46"

[features]
default = ["hola"]
hola = ["confy", "isocountry", "serde-tuple-vec-map", "uuid"]
gzip = ["tower-http/compression-gzip"]
tls = ["axum-server/tls-rustls"]
true-status = []
redact-ip = ["lazy-regex"]

[profile.release]
codegen-units = 1
lto = true

# for `cargo deb`
[package.metadata.deb]
default-features = false
features = ["gzip", "tls", "true-status", "redact-ip", "reqwest/trust-dns"]
