[package]
name = "luminous-ttv"
version = "0.5.10"
authors = ["Malloc Voidstar <1284317+AlyoshaVasilieva@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/AlyoshaVasilieva/luminous-ttv"
license = "GPL-3.0-only"
description = "Avoid Twitch ads by grabbing video playlists from Russia"
readme = "README.md"

[dependencies]
anyhow = "1.0.43"
clap = { version = "4.1", features = ["derive", "env"] }
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"
serde_urlencoded = "0.7.1"
rand = "0.9.1"
const_format = "0.2.18"
url = "2.2.2"
extend = "1.1.2"
lazy-regex = { version = "3.0.2", default-features = false, features = ["std", "perf"], optional = true }
cfg-if = "1.0"
phf = { version = "0.13.1", features = ["macros"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.8"

# Only used by Hola code:
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
confy = { version = "1.0", optional = true }
isocountry = { version = "0.3.2", optional = true }
serde-tuple-vec-map = { version = "1.0", optional = true }

# Axum and related deps
axum = { version = "0.8.1", features = ["http2", "json"] }
axum-extra = { version = "0.12.1", default-features = false, features = ["typed-header"] }
axum-server = "0.8"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.1", features = ["limit", "load-shed", "timeout", "util"] }
tower-http = { version = "0.6", features = ["cors", "set-header"] }
http = "1.1"

tracing = { version = "0.1", features = ["release_max_level_debug"] } # disable trace in releases
tracing-subscriber = "0.3"

[dependencies.reqwest]
version = "0.12.4"
default-features = false
features = ["rustls-tls", "http2", "gzip", "brotli", "socks", "json"]

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "0.50"

[features]
default = ["hola"]
hola = ["confy", "isocountry", "serde-tuple-vec-map", "uuid"]
gzip = ["tower-http/compression-gzip"] # compress responses
# Note: zstd seems to have browser support now (use level 1 or 2).
# Investigate shared dictionaries. Not sure if they're usable yet, but they'd save ~30% per M3U.
tls = ["axum-server/tls-rustls"] # support listening as HTTPS, without needing a reverse proxy
true-status = [] # extended status endpoint that simulates a user's request flow
redact-ip = ["lazy-regex"] # try to hide server IP in responses (no guarantees)

[profile.release]
codegen-units = 1
lto = true

# for `cargo deb`
[package.metadata.deb]
license-file = ["LICENSE-GPL.txt", "0"]
maintainer-scripts = "debian/maint-scripts" # empty, see cargo-deb docs
systemd-units = { enable = false, unit-scripts = "debian" }
default-features = false
features = ["gzip", "tls", "true-status", "redact-ip", "reqwest/hickory-dns"]
# reqwest/hickory-dns is set in case it's running on musl with a broken DNS implementation
